[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/UI/Start.png" type="Texture" id=1]
[ext_resource path="res://Art/UI/Title.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GamePlayUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://Art/UI/GameOver.png" type="Texture" id=5]
[ext_resource path="res://Font/EndText.tres" type="DynamicFont" id=6]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
game_lose_text = "You ran out of time and the boss fired you"
game_win_text = "You've tidied the mess! Well done"

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 410.5
margin_top = 401.857
margin_right = 573.5
margin_bottom = 452.857
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 107.0
margin_top = 8.0
margin_right = 877.0
margin_bottom = 268.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePlay" parent="." instance=ExtResource( 3 )]
visible = false

[node name="GameOver" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.5
margin_top = -102.5
margin_right = 175.5
margin_bottom = 102.5
texture = ExtResource( 5 )
expand = true

[node name="EndText" type="Label" parent="GameOver"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -68.0
custom_fonts/font = ExtResource( 6 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/TextureButton" to="." method="_on_TextureButton_pressed"]
